[gd_scene load_steps=2 format=3 uid="uid://bkc4qdtrsql47"]

[ext_resource type="Script" path="res://spawnrocket.gd" id="1_jki4a"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jki4a")

[node name="rocketspawntime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="deleteold" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="warningtime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="rocketspawntime" to="." method="_on_rocketspawntime_timeout"]
[connection signal="timeout" from="deleteold" to="." method="_on_deleteold_timeout"]
[connection signal="timeout" from="warningtime" to="." method="_on_warningtime_timeout"]
